Merge service project to server to make development pipeline simple